# blink

./: .clang-format  .gitignore  .gitmodules  .travis.yml  :1  AUTHORS  BUILD  BUILD.md  CHANGELOG.md  CHANGELOG.old.md  CODE.md  COPYING  README.md  compose.yml  files_header.sh  get_frameworks.sh  header  how to Download Blink app For pc and Windows  main.m  template_setup.xcconfig  update_cacert.sh
coreutils-8.27/: .mailmap  .prev-version  .tarball-version  .timestamp  .vg-suppressions  AUTHORS  ChangeLog  Makefile  Makefile.am  Makefile.in  NEWS  README  THANKS  THANKS-to-translators  THANKS.in  TODO  aclocal.m4  bootstrap  bootstrap.conf  cfg.mk  config.status  configure  configure.ac  dist-check.mk  init.cfg
coreutils-8.27/autom4te.cache/: output.1  requests  traces.0  traces.1
coreutils-8.27/build-aux/: ChangeLog-2007  do-release-commit-and-tag  gen-lists-of-programs.sh  gen-single-binary.sh  gendocs.sh  gnu-web-doc-update  prefix-gnulib-mk  texinfo.tex
coreutils-8.27/coreutils/: coreutils.h
coreutils-8.27/coreutils/coreutils.xcodeproj/: project.pbxproj
coreutils-8.27/doc/: coreutils.info  coreutils.texi  local.mk  parse-datetime.texi  perm.texi  stamp-vti
coreutils-8.27/gnulib-tests/: Makefile  Makefile.in  gnulib.mk  inet_pton.c  infinity.h  localename.c  localename.h  macros.h  minus-zero.h  nan.h  nap.h  null-ptr.h  perror.c  randomd.c  randoml.c  setlocale.c  signature.h  sleep.c  test-accept.c  test-alignof.c  test-alloca-opt.c  test-areadlink-with-size.c  test-areadlink.c  test-areadlink.h  test-areadlinkat.c  test-argmatch.c  test-argv-iter.c  test-arpa_inet.c  test-base32.c  test-base64.c  test-binary-io.c  test-binary-io.sh  test-bind.c  test-bitrotate.c  test-btowc.c  test-c-ctype.c  test-c-strcasecmp.c  test-c-strncasecmp.c  test-calloc-gnu.c  test-canonicalize.c  (+325 more)
coreutils-8.27/gnulib-tests/glthread/: thread.c  thread.h  yield.h
coreutils-8.27/gnulib-tests/unistr/: test-strncat.h  test-u8-mbtoucr.c  test-u8-uctomb.c
coreutils-8.27/gnulib-tests/uniwidth/: test-uc_width.c  test-uc_width2.c  test-uc_width2.sh
coreutils-8.27/lib/: ChangeLog-2007  acl-errno-valid.c  acl-internal.c  acl-internal.h  acl.h  acl_entries.c  alignof.h  alloca.c  alloca.h  allocator.c  anytostr.c  areadlink-with-size.c  areadlink.c  areadlinkat.c  argmatch.c  argmatch.h  argv-iter.c  argv-iter.h  asnprintf.c  assure.h  at-func.c  at-func2.c  backupfile.c  backupfile.h  base32.c  base64.c  base64.h  basename-lgpl.c  basename.c  binary-io.c  binary-io.h  bitrotate.c  bitrotate.h  btowc.c  buffer-lcm.c  buffer-lcm.h  c-ctype.c  c-strcasecmp.c  c-strncasecmp.c  c-strtod.c  (+490 more)
coreutils-8.27/lib/.deps/: acl-errno-valid.Po  acl-internal.Po  acl_entries.Po  allocator.Po  areadlink-with-size.Po  areadlink.Po  areadlinkat.Po  argmatch.Po  argv-iter.Po  asnprintf.Po  at-func2.Po  backupfile.Po  base32.Po  base64.Po  basename-lgpl.Po  basename.Po  binary-io.Po  bitrotate.Po  buffer-lcm.Po  c-ctype.Po  c-strcasecmp.Po  c-strncasecmp.Po  c-strtod.Po  c-strtold.Po  calloc.Po  canon-host.Po  canonicalize.Po  careadlinkat.Po  chdir-long.Po  chmodat.Po  chown.Po  chownat.Po  cloexec.Po  close-stream.Po  closein.Po  closeout.Po  copy-acl.Po  creat-safer.Po  cycle-check.Po  di-set.Po  (+237 more)
coreutils-8.27/lib/arpa/: inet.h
coreutils-8.27/lib/glthread/: lock.c  threadlib.c  tls.c  tls.h
coreutils-8.27/lib/removedHeaders/: getopt.h  ioctl.h  select.h  socket.h  stat.h  uio.h
coreutils-8.27/lib/selinux/: context.h  selinux.h
coreutils-8.27/lib/sys/: resource.h  stat.h  utsname.h  wait.h
coreutils-8.27/lib/unistr/: u8-mbtoucr.c  u8-uctomb-aux.c  u8-uctomb.c
coreutils-8.27/lib/uniwidth/: width.c
coreutils-8.27/m4/: ChangeLog-2007  acl.m4  assert.m4  autobuild.m4  backupfile.m4  base64.m4  bison.m4  boottime.m4  c-strtod.m4  calloc.m4  canon-host.m4  chdir-long.m4  check-decl.m4  chown.m4  close-stream.m4  closein.m4  closeout.m4  config-h.m4  cu-progs.m4  cycle-check.m4  d-ino.m4  dirent-safer.m4  dup.m4  euidaccess.m4  faccessat.m4  fchdir.m4  fchmodat.m4  fchownat.m4  fclose.m4  fcntl-safer.m4  fdatasync.m4  fdopen.m4  fdopendir.m4  fflush.m4  fileblocks.m4  filemode.m4  filenamecat.m4  fpending.m4  fpurge.m4  freadahead.m4  (+146 more)
coreutils-8.27/man/: b2sum.x  base32.x  chgrp.x  chmod.x  chown.x  coreutils.x  df.x  du.x  dummy-man  groups.x  head.x  help2man  hostid.x  local.mk  md5sum.x  nice.x  numfmt.x  od.x  readlink.x  realpath.x  rm.x  sha1sum.x  sort.x  stdbuf.x  sync.x  tail.x  timeout.x  uniq.x  users.x
coreutils-8.27/po/: LINGUAS  Makefile  Makefile.in  Makefile.in.in  Makevars  POTFILES  POTFILES.in  Rules-quot  af.gmo  af.po  be.gmo  be.po  bg.gmo  bg.po  ca.gmo  ca.po  coreutils.pot  cs.gmo  cs.po  da.gmo  da.po  de.gmo  de.po  el.gmo  el.po  eo.gmo  eo.po  es.gmo  es.po  et.gmo  et.po  eu.gmo  eu.po  fi.gmo  fi.po  fr.gmo  fr.po  ga.gmo  ga.po  gl.gmo  (+55 more)
coreutils-8.27/src/: .commands_all.swp  .cu-progs.mk.swp  .local.mk.swp  .system.h.swp  base64.c  basename.c  cat.c  chcon.c  chgrp.c  chmod.c  chown-core.c  chown-core.h  chown.c  chroot  chroot.c  cksum.c  comm.c  commands_all  copy.c  copy.h  coreutils-arch.c  coreutils-dir.c  coreutils-vdir.c  coreutils.c  cp-hash.c  cp-hash.h  cp.c  csplit.c  cu-progs.mk  cut.c  date.c  dcgen  dd.c  df.c  die.h  dircolors.c  dircolors.h  dircolors.hin  dirname.c  du.c  (+119 more)
coreutils-8.27/src/.deps/: chroot.Po  hostid.Po  nice.Po  operand2sig.Po  timeout.Po  version.Po  who.Po
coreutils-8.27/src/blake2/: b2sum.c  b2sum.h
coreutils-8.27/tests/: Coreutils.pm  CuSkip.pm  CuTmpdir.pm  GNUmakefile  d_type-check  envvar-check  init.sh  local.mk  no-perl  other-fs-tmpdir  sample-test
coreutils-8.27/tests/chgrp/: basic.sh  default-no-deref.sh  deref.sh  no-x.sh  posix-H.sh  recurse.sh
coreutils-8.27/tests/chmod/: c-option.sh  equal-x.sh  equals.sh  inaccessible.sh  no-x.sh  octal.sh  setgid.sh  silent.sh  thru-dangling.sh  umask-x.sh  usage.sh
coreutils-8.27/tests/chown/: basic.sh  deref.sh  preserve-root.sh  separator.sh
coreutils-8.27/tests/cp/: abuse.sh  acl.sh  attr-existing.sh  backup-1.sh  backup-dir.sh  backup-is-src.sh  capability.sh  (+54 more)
(+1959 files in other folders)
